--- a/user-data.erb
+++ b/user-data.erb
@@ -3,7 +3,7 @@
 coreos:
   etcd:
       #generate a new token for each unique cluster from https://discovery.etcd.io/new
-      discovery: https://discovery.etcd.io/40fe93cccd44a2ff2d831a0a3b8cd9e3
+      <%= @etcd_discovery %>
       addr: $public_ipv4:4001
       peer-addr: $public_ipv4:7001
   units:
